syntax = "proto3";
option csharp_namespace = "GrpcService";
package restaurant;

service Restaurant {
    rpc GetRestaurantInfo (RestaurantInfoRequest) returns (RestaurantInfoResponse);
}

message RestaurantInfoRequest {
    string id = 1;
}

message RestaurantInfoResponse  {
    string id = 1;
    string email = 2;
    string name = 4;
    string description = 5;
    string bannerUrl = 6;
}